style.css
html {
    position: relative;
}

body {
    /* margin-bottom: 250px; */
    overflow-x: hidden;
}

.navbar {
    margin: 17px;
    border-radius: 8px;
    background: rgba(56, 63, 69, 0.95) !important;
    backdrop-filter: blur(10px) !important;
    transition: background 0.2s ease;
    z-index: 9999;
}

.navbar:hover {
    background: rgba(56, 63, 69, 1) !important;
}

.nav-link {
    font-size: 18px;
    font-weight: 500;
}

.navbar .nav-link.dropdown-toggle {
    outline: none;
    -webkit-tap-highlight-color: transparent;
}

.nav-link.active {
    background-color: rgb(56, 63, 69);
    color: white;
    border-radius: 10px;
    margin-bottom: 5px;
    width: 100%;
    padding-left: 20px;
    font-weight: 500;
    font-size: 16px;
}

.nav-link.inactive {
    background-color: rgba(247, 247, 247, 0.8);
    color: rgb(0, 0, 0);
    border-radius: 10px;
    margin-bottom: 5px;
    font-weight: 400;
    font-size: 16px;
}

.nav-link.inactive:hover {
    background-color: rgb(235, 235, 235);
}

.overlay-text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1;
    text-align: center;
    color: #fff;
    text-shadow: 1px 1px #000;
}

.overlay-text h1 {
    font-size: 8vw;
    margin-bottom: 0;
}

.jumbotron.jumbotron-sm {
    padding-top: 10px;
    padding-bottom: 10px;
}

.jumbotron h1.display-4 {
    font-size: 2.5rem;
    margin-top: 10px;
    margin-bottom: 10px;
}

hr {
    border: none;
    border: 1px solid rgb(236, 236, 236);
    margin: 10px 0;
}

.content {
    font-size: 1.1rem;
}

.info {
    border: 1px solid #ccc;
    border-radius: 3px;
    box-shadow: 1px 1px 3px #ccc;
    padding: 10px;
    margin-bottom: 0rem;
    font-size: 1.25rem;
    font-weight: 350;
    background-color: rgba(255, 255, 255, 0.85);
    backdrop-filter: blur(10px);
}

.badge {
    position: absolute;
    top: -15px;
    left: -15px;
    background-color: white;
    border-radius: 50%;
    box-shadow: 0.5px 0.5px 3px rgba(0, 0, 0, 0.3);
    width: 30px;
    height: 30px;
    display: flex;
    font-size: 1rem;
    justify-content: center;
    align-items: center;
    color: #555;
    font-weight: bold;
    z-index: 2;
}

.badge-alert {
    position: absolute;
    top: -12px;
    left: -5px;
    background-color: white;
    /* box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.2); */
    width: 50px;
    height: 24px;
    display: flex;
    font-size: 1rem;
    justify-content: center;
    align-items: center;
    color: white;
    font-weight: 600;
    z-index: 2;
    background: #ff6000;
}

.badge-alert::before,
.badge-alert::after {
  content: "";
  position: absolute;
  top: 0;
  width: 0;
  height: 0;
}

.badge-alert::before {
    content: "";
    position: absolute;
    top: 0;
    left: -11px;
    width: 0;
    height: 0;
    border-top: 12px solid #ff6000;
    border-bottom: 14px solid #ff6000;
    border-left: 12px solid transparent;
  }

.badge-alert::after {
  border-top: 12px solid transparent;
  border-bottom: 14px solid transparent;
  border-left: 12px solid #ff6000;
  right: -11px;
}

.list-group-item {
    font-size: 1.25rem;
    font-weight: 500;
    /* border-radius: 20px !important; */
    border-bottom-left-radius: 20px;
    background-image: linear-gradient(to right, rgb(255, 255, 255), rgba(255, 255, 255, 0));
    /* box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); */
    background-color: rgba(255, 255, 255, 0);
    border: 0px;
}

.modal-dialog.modal-dialog-centered {
    display: flex;
    justify-content: center;
    align-items: center;
}

.dropdown-menu-dark {
    background-color: rgb(43, 48, 53);
    border-radius: 8px;
    padding: 10px;
    margin: 2px;
    margin-top: 12px;
}

.dropdown-menu-dark .dropdown-item {
    color: #b8b8b8;
    font-size: 18px;
    font-weight: 500;
    align-self: center;
}

.dropdown-menu-dark .dropdown-item:hover,
.dropdown-menu-dark .dropdown-item:focus {
    color: #f5f5f5;
    background-color: rgb(51, 57, 63);
    border-radius: 8px;
}

.dropdown-menu-centered {
    left: 50% !important;
    transform: translateX(-50%) !important;
    position: relative;
}

.dropdown-menu-centered::before {
    content: "";
    position: absolute;
    top: -10px;
    left: 50%;
    transform: translateX(-50%);
    border-style: solid;
    border-width: 0 10px 10px 10px;
    border-color: transparent transparent rgb(43, 48, 53) transparent;
}

.dropdown-item-content {
    display: flex;
    align-items: center;
}

.dropdown-item-image {
    height: 50px;
    margin-right: 10px;
    margin-left: -15px;
}

.dropdown-item-text {
    color: #b8b8b8;
    font-size: 18px;
    font-weight: 500;
    padding-left: 0;
    display: flex;
    flex-direction: column;
    text-align: left;
}

.dropdown-item-subtext {
    font-size: 12px;
    color: #999;
}

.content-wrapper {
    display: flex;
    flex-direction: column;
    min-height: 90vh;
}

.sticky-footer {
    margin-top: auto;
}

.overflow-visible {
    overflow: visible;
    padding: 0;
}

.background {
    position: relative;
    overflow: hidden;
    transform: rotate(-5deg);
}

.fade-top {
    position: relative;
    mask-image: linear-gradient(to top, transparent, black);
    -webkit-mask-image: linear-gradient(to top, transparent, black);
}

.background::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
    pointer-events: none;
}

.img-fluid {
    width: 200%;
    height: auto;
    max-width: none;
}

.text-decoration-none {
    color: black;
}

.text-decoration-none:hover {
    color: black;
}

.sidebar-custom {
    margin-top: 20px;
    margin-bottom: 20px;
    border-radius: 5px;
    padding-top: 20px;
    height: 858px;
    box-shadow: 0.1px 0.1px 3px rgba(53, 53, 53, 0.3);
    background-color: rgba(255, 255, 255, 0.7);
    backdrop-filter: blur(10px);
}

.fixed-top {
    margin-left: 22px;
}

.documentation-body {
    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), url('./images/Documentation_Background.png');
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
}

.game-body {
    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), url('./images/Game_Background.png');
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
}

.table-documentation {
    background-color: rgba(255, 255, 255, 0.85);
    backdrop-filter: blur(10px);
}

.text-white-shadow {
    text-shadow: -1px -1px 0 rgba(255, 255, 255, 0.5), 1px -1px 0 rgba(255, 255, 255, 0.5), -1px 1px 0 rgba(255, 255, 255, 0.5), 1px 1px 0 rgba(255, 255, 255, 0.5);
}

.card-header-custom {
    /* background-color: rgba(56, 63, 69, 1);
    
    color: white; */
}

.blue {
    background-color:rgb(211, 239, 255);
}

.aquamarine {
    background-color:rgb(221, 255, 244);
}

.card-body-custom {
    /* background-color: #ffffff; */
    padding: 0.5rem;
    padding-bottom: 1.5rem;
    position: relative;
}

.card-custom {
    border: 0px solid #ccc;
    border-radius: 3px;
    box-shadow: 0 0 10px #969696;
    position: relative;
}

.card img {
    max-width: 100%;
    height: auto;
}

.btn-custom {
    position: absolute;
    bottom: -40px;
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    align-items: center;
    /* padding: 10px; */
    background-color: transparent;
    border: none;
}

.plugin-section {
    padding-top: 20px;
    padding-bottom: 40px;
    background-image: url('./images/Documentation_Background.png');
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
    box-shadow: 0px 0px 20px 0px #00000063;

}

.game-section {
    padding-top: 20px;
    padding-bottom: 40px;
    background-image: url('./images/Game_Background.png');
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
    box-shadow: 0px 0px 20px 0px #00000063;
}

.section-header {
    font-size: 40px;
    font-weight: 700;
    /* color: rgb(255, 255, 255); */
    text-shadow: rgb(0, 0, 0) 1px 0 3px;
    padding-bottom: 20px;
    padding-top: 20px;
}

.footer-custom {
    box-shadow: 0px 0px 20px 0px #00000063;
    margin-left: -5vw;
    margin-right: -5vw;
}

.body-background-generic-blur {
    background-image: url('./images/Generic_Background.png');
    /* background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), url('./images/Generic_Background.png'); */
    backdrop-filter: blur(10px);
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
}

.body-background-generic {
    background-image: url('./images/Generic_Background.png');
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
}

.slogan {
    margin-top: -35px;
    font-size: 20px;
    font-weight: 400;
    text-shadow: rgb(0, 0, 0) 1px 0 1px;
}

/* width */
::-webkit-scrollbar {
    width: 8px;
    cursor: default;
}

/* Track */
::-webkit-scrollbar-track {
    box-shadow: inset 0 0 5px grey;
    /* border-radius: 6px; */
}


/* Handle */
::-webkit-scrollbar-thumb {
    /* background: #4f4f4f; */
    background: rgba(56, 63, 69, 0.95);
    /* border-radius: 2px; */
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #444;
}

